force-app/main/default/objects/OpportunityLineItem/fields/Aprobar_5p_descuento__c.field-meta.xml
<CustomField>
    <fullName>Aprobar_5p_descuento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar 5% Jefe de Venta</label>
    <type>Checkbox</type>
</CustomField>