force-app/main/default/objects/OpportunityLineItem/fields/DescuentoVenta__c.field-meta.xml
<CustomField>
    <fullName>DescuentoVenta__c</fullName>
    <formula>if (ListPrice &gt; UnitPrice , (ListPrice - UnitPrice) / ListPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>