force-app/main/default/objects/OpportunityLineItem/fields/Precio_venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_venta__c</fullName>
    <description>Campo para lectura</description>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>El precio de venta debe ser modificado en las cotizaciones</inlineHelpText>
    <label>Precio venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>